--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body{
   font-family: "courier", monospace;
 }
 canvas {
-  margin: auto;
+  /* margin: auto;
   top: 0;
   left:0;
   position:absolute;
-  z-index: -1;
-  /* margin: 100px auto 0 auto;
+  z-index: -1; */
+  margin: 0 auto 0 auto;
   display: block;
-  border: 5px solid black; */
+  border: 5px solid black;
 }
